fixed horizontal scroll on mobile details

--- a/src/assets/scss/utils/_mediaqueries.scss
+++ b/src/assets/scss/utils/_mediaqueries.scss
@@ -16,3 +16,12 @@
 @mixin for-big-desktop-up {
     @media (min-width: 1800px) { @content; }
 }
+
+@media not all and (min-resolution:.001dpcm)
+{ @supports (-webkit-appearance:none) {
+
+    .course { 
+        margin-top: .5rem;
+        margin-bottom: .5rem;
+    }
+}}
